--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include LICENSE
 recursive-include bims/static *
 recursive-include bims/templates *
 recursive-include docs *
+recursive-exclude core *
