Show geocontext on click

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -49,6 +49,7 @@ uwsgi:
     - VIRTUAL_HOST=bims.kartoza.com
     - VIRTUAL_PORT=8080
     - RABBITMQ_HOST=rabbitmq
+    - GEOCONTEXT_URL=http://localhost:65402
   volumes:
     - ../../django-bims:/home/web/django_project
     - ./static:/home/web/static:rw
@@ -120,6 +121,7 @@ devweb:
     - VIRTUAL_HOST=bims.kartoza.com
     - VIRTUAL_PORT=8080
     - RABBITMQ_HOST=rabbitmq
+    - GEOCONTEXT_URL=http://localhost:65402
   volumes:
     - ../../django-bims:/home/web/django_project
     - ./static:/home/web/static
