--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -29,3 +29,6 @@ pygbif==0.2.0
 
 # Django BIMS
 # git+https://github.com/dimasciput/django-bims.git
+
+# bibliography management
+django-tailordev-biblio==1.1.0
