Change search method

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -40,8 +40,12 @@ elasticsearch:
   container_name: bims-elasticsearch
   restart: on-failure:5
   #  read_only: true
-  image: elasticsearch:5.5.2
+  image: elasticsearch:2.4.2
   hostname: elasticsearch
+  environment:
+    - cluster.name=docker-cluster
+    - bootstrap.memory_lock=true
+    - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
   ports:
     - "9200:9200"
 
@@ -59,6 +63,7 @@ uwsgi:
     - VIRTUAL_HOST=bims.kartoza.com
     - VIRTUAL_PORT=8080
     - RABBITMQ_HOST=rabbitmq
+    - HAYSTACK_HOST=elasticsearch
     - GEOCONTEXT_URL=http://localhost:65402
   volumes:
     - ../../django-bims:/home/web/django_project
@@ -127,7 +132,7 @@ devweb:
     - DATABASE_USERNAME=docker
     - DATABASE_PASSWORD=docker
     - DATABASE_HOST=db
-    - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
+    - DJANGO_SETTINGS_MODULE=core.settings.dev_docker
     - PYTHONPATH=/home/web/django_project
     - VIRTUAL_HOST=bims.kartoza.com
     - VIRTUAL_PORT=8080
