--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -33,4 +33,7 @@ pygbif==0.2.0
 Pillow==5.1.0
 django-ordered-model==1.4.3
 django-elasticsearch-dsl==0.5
-elasticsearch-dsl==5.4.0
+
+# KBIMS-fish
+git+https://github.com/kartoza/kbims-fish
+django-haystack==2.8.1
