--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -31,4 +31,4 @@ pygbif==0.2.0
 # git+https://github.com/dimasciput/django-bims.git
 
 # documentation generation
-django-modelsdoc
+django-modelsdoc==0.1.9
