Add missing CONTACT_US_EMAIL env variable.

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -65,6 +65,7 @@ uwsgi:
     - RABBITMQ_HOST=rabbitmq
     - HAYSTACK_HOST=elasticsearch
     - GEOCONTEXT_URL=http://localhost:65402
+    - CONTACT_US_EMAIL=dimas@kartoza.com
   volumes:
     - ../../django-bims:/home/web/django_project
     - ./static:/home/web/static:rw
