--- a/.gitignore
+++ b/.gitignore
@@ -87,8 +87,6 @@ celerybeat-schedule
 venv/
 ENV/
 
-# pycharm helpers
-.pycharm_helpers/
 
 # Spyder project settings
 .spyderproject
@@ -106,6 +104,12 @@ ENV/
 # Pycharm
 .idea
 .pycharm_helpers
+
+# database stuff
+*.dmp
+
+# node modules
+ node_modules/
 
 # Pg cluster for docker
 deployment/pg/postgres_data/9.3
