--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -1,6 +1,5 @@
 #--------- Generic stuff all our Dockerfiles should start with so we get caching ------------
-# Note this base image is based on debian
-FROM kartoza/django-base
+FROM geosolutionsit/geonode-generic:1.0
 MAINTAINER Dimas Ciputra<dimas@kartoza.com>
 
 RUN apt-get update -y && apt-get -y --force-yes install yui-compressor
