--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,59 @@
+sudo: required
+
 language: python
 
 services:
-  - postgresql
+  - docker
 
 env:
   global:
     - ON_TRAVIS=true
-    - DATABASE_URL='postgres://postgres:@localhost:5432/test_db'
     - SECRET_KEY='tT\xd7\xb06\xf7\x9b\xff\x0fZL\xca\xca\x11\xefM\xacr\xfb\xdf\xca\x9b'
-    - DJANGO_SETTINGS_MODULE=core.settings.test_travis
-    - RABBITMQ_HOST='rabbitmq'
-    - CONTACT_US_EMAIL='dimas@kartoza.com'
+    - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
+    - ALL_FILE=all.travis.yml
+    - COMPOSE_PROJECT_NAME=bims
+    - COMPOSE_FILE=deployment/docker-compose.yml:deployment/docker-compose.override.yml
 
-sudo: false
-dist: trusty
+matrix:
+  include:
+    # Note that for now this has no effect because we are using
+    # GeoNode default image which is pinned at specific PYTHON version.
+    - python: 2.7
+      env: PYTHON=2.7
+    - python: 3.6
+      env: PYTHON=3.6
 
-python:
-  - '2.7'
-  - '3.6'
-
-addons:
-  postgresql: "9.3"
-  apt:
-    packages:
-    - postgresql-9.3-postgis-2.3
+before_install:
+  # install ansible
+  - sudo apt-get -y update
+  - sudo apt-get -y install libssl-dev
+  - sudo pip install ansible
 
 install:
   - pip install coveralls
   - pip install -r REQUIREMENTS-dev.txt
-  - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then pip install django==2.0.2; fi
-  - nodeenv -p --node=0.10.31
-  - npm -g install yuglify
-
-before_script:
-  - psql -c 'create database test_db;' -U postgres
-  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d test_db
+  # setup files
+  - cp deployment/ansible/development/group_vars/${ALL_FILE} deployment/ansible/development/group_vars/all.yml
+  - make setup-ansible ANSIBLE_ARGS="--extra-vars='pycharm_version=\"\"' --skip-tags=development"
+  # show docker-compose.override.yml for debugging
+  - cat deployment/docker-compose.override.yml
 
 script:
-  - flake8 --config .flake8 .
-  - python manage.py makemigrations
-  - python manage.py migrate
-  - python manage.py collectstatic --noinput --verbosity 0
-  - coverage run manage.py test
+  - make flake8-check
+  - make build
+  - make up
+  - make update-migrations
+  - make sync-geonode
+  - make migrate
+  - make collectstatic
+  - make coverage-django-test
 
 after_success:
+  - coverage combine
+  # Replace parent directory to travis directory, because we are running
+  # coverage using docker mount
+  - sed -i 's/home\/web\/django_project/home\/travis\/build\/inasafe\/inasafe-django\/django_project/g' .coverage
+  - cat .coverage
   - coveralls
 
 email:
