--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,7 @@ ENV/
 .idea
 
 # Pg cluster for docker
+deployment/pg
 deployment/pg/postgres_data/9.3
 deployment/pg/postgres_staging_data/9.3
 deployment/pg/postgres_dev_data/9.3
