--- a/deployment/production/Dockerfile
+++ b/deployment/production/Dockerfile
@@ -24,6 +24,7 @@ RUN cd / && npm install
 
 # install shallow clone of django bims geonode branch
 ARG BIMS_TAG=geonode
+ADD https://api.github.com/repos/kartoza/django-bims/git/refs/heads/${BIMS_TAG} version.json
 RUN git clone --depth=1 git://github.com/kartoza/django-bims.git --branch ${BIMS_TAG} /usr/src/bims
 
 #USER www-data
