Fix upload linestring

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = fish
 	url = git@github.com:kartoza/kbims-fish.git
     branch = apps
+[submodule "reptile"]
+	path = reptile
+	url = git@github.com:kartoza/kbims-reptile.git
+    branch = apps
