--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -43,8 +43,6 @@ django-contact-us==0.4.1
 Pillow==5.1.0
 django-ordered-model==1.4.3
 
-# KBIMS-fish
-git+https://github.com/kartoza/kbims-fish
 django-haystack==2.8.1
 elasticsearch==5.0.1
 
@@ -52,3 +50,4 @@ elasticsearch==5.0.1
 django-prometheus==1.0.14
 prometheus_client==0.2.0
 
+pyshp==1.2.12
