Add geoserver data volume in uwsgi

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -81,6 +81,8 @@ services:
       - db:db
       - elasticsearch:elasticsearch
       - geoserver:geoserver
+    volumes:
+      - geoserver-data-dir:/usr/src/geonode/geoserver/data/data
     restart: unless-stopped
     user: root
 
