Add GEOCONTEXT_COLLECTION_KEY in env variable.

--- a/deployment/ansible/development/group_vars/all.sample.yml
+++ b/deployment/ansible/development/group_vars/all.sample.yml
@@ -15,6 +15,7 @@ django:
   environment:
     SITE_DOMAIN_NAME: 'http://django-bims.test'
     GEOCONTEXT_URL: 'http://localhost:65402'
+    GEOCONTEXT_COLLECTION_KEY: 'climate'
     CONTACT_US_EMAIL: 'dimas@kartoza.com'
     DEBUG: True
     DJANGO_SETTINGS_MODULE: core.settings.dev_docker
