--- a/deployment/ansible/development/group_vars/all.travis.yml
+++ b/deployment/ansible/development/group_vars/all.travis.yml
@@ -16,6 +16,7 @@ django:
   environment:
     SITE_DOMAIN_NAME: 'http://uwsgi'
     GEOCONTEXT_URL: 'http://localhost:65402'
+    GEOCONTEXT_COLLECTION_KEY: 'climate'
     CONTACT_US_EMAIL: 'dimas@kartoza.com'
     DEBUG: True
     DJANGO_SETTINGS_MODULE: core.settings.dev_docker
