--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -82,6 +82,7 @@ services:
       - db:db
       - elasticsearch:elasticsearch
       - geoserver:geoserver
+      - worker:worker
     volumes:
       - geoserver-data-dir:/usr/src/geonode/geoserver/data/data
     restart: unless-stopped
