Use memcached backend

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -100,7 +100,7 @@ services:
       - DATABASE_USERNAME=docker
       - DATABASE_PASSWORD=docker
       - DATABASE_HOST=db
-      - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
+      - DJANGO_SETTINGS_MODULE=core.settings.prod_worker
       - VIRTUAL_HOST=bims.kartoza.com
       - VIRTUAL_PORT=8080
       - RABBITMQ_HOST=rabbitmq
@@ -114,6 +114,7 @@ services:
       - elasticsearch:elasticsearch
       - geoserver:geoserver
       - rabbitmq:rabbitmq
+      - cache:cache
     volumes:
       - ../../django-bims:/home/web/django_project
       - ./static:/home/web/static:rw
@@ -156,3 +157,11 @@ services:
       - USER=rabbit_user
       - RABBITMQ_NODENAME=rabbit
     restart: unless-stopped
+
+  cache:
+   image: memcached
+   ports:
+     - "11211:11211"
+   entrypoint:
+    - memcached
+    - -m 64
