--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ env:
   global:
     - ON_TRAVIS=true
     - SECRET_KEY='tT\xd7\xb06\xf7\x9b\xff\x0fZL\xca\xca\x11\xefM\xacr\xfb\xdf\xca\x9b'
-    - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
+    - DJANGO_SETTINGS_MODULE=core.settings.travis_docker
     - ALL_FILE=all.travis.yml
     - COMPOSE_PROJECT_NAME=bims
     - COMPOSE_FILE=deployment/docker-compose.yml:deployment/docker-compose.override.yml
+    - MONITORING_ENABLED=False
 
 matrix:
   include:
