--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -24,6 +24,7 @@ django-grappelli==2.11.1
 
 djangorestframework==3.7.7
 djangorestframework-gis==0.13
+django-colorfield==0.1.15
 django-filter==1.1.0
 coreapi==2.3.3
 pygbif==0.2.0
