--- a/deployment/ansible/development/group_vars/all.sample.yml
+++ b/deployment/ansible/development/group_vars/all.sample.yml
@@ -42,7 +42,8 @@ geonode:
     IS_CELERY: False
     C_FORCE_ROOT: 1
     # replaced with defaults in settings
-    GEOSERVER_PUBLIC_LOCATION: django-bims.test/geoserver/
+    # Must have protocol
+    GEOSERVER_PUBLIC_LOCATION: http://django-bims.test/geoserver/
     GEOSERVER_LOCATION: http://geoserver:8080/geoserver/
     STATIC_ROOT: /home/web/static/static
     MEDIA_ROOT: /home/web/media
@@ -71,3 +72,4 @@ docker_port_forward:
     http: 63302
     ssh: 63303
     karma_tests: 63304
+    geoserver: 63305
