--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       - GEOCONTEXT_URL=https://geocontext.kartoza.com
       - GEOCONTEXT_COLLECTION_KEY=climate
       - CONTACT_US_EMAIL=dimas@kartoza.com
+      - IS_HEALTHYRIVERS=false
     links:
       - smtp:smtp
       - db:db
@@ -108,6 +109,7 @@ services:
       - GEOCONTEXT_URL=https://geocontext.kartoza.com
       - GEOCONTEXT_COLLECTION_KEY=climate
       - CONTACT_US_EMAIL=dimas@kartoza.com
+      - IS_HEALTHYRIVERS=false
     links:
       - smtp:smtp
       - db:db
