Add ipt orchestration

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,4 @@ deployment/ansible/development/group_vars/all.yml
 deployment/docker-compose.override.yml
 deployment/logs
 deployment/sites-enabled
+deployment/ipt
