Change gbif ipt source image

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -169,7 +169,7 @@ services:
     - -m 64
 
   gbif_ipt:
-    image: gbif/ipt:latest
+    image: kartoza/gbif_ipt:latest
     links:
       - db:db
     volumes:
