--- a/deployment/production/REQUIREMENTS.txt
+++ b/deployment/production/REQUIREMENTS.txt
@@ -46,7 +46,7 @@ Pillow==5.1.0
 django-ordered-model==1.4.3
 
 # Django haystack support
-git+https://github.com/dimasciput/django-haystack.git
+git+https://github.com/dimasciput/django-haystack.gitdjango-proxy==1.1.0
 elasticsearch==5.0.1
 
 # prometheus monitoring support
@@ -59,3 +59,4 @@ pyshp==1.2.12
 django-ckeditor==5.6.1
 django-crispy-forms==1.7.2
 djangorestframework-gis==0.13
+django-proxy==1.1.0
