--- a/deployment/production/REQUIREMENTS.txt
+++ b/deployment/production/REQUIREMENTS.txt
@@ -46,7 +46,7 @@ Pillow==5.1.0
 django-ordered-model==1.4.3
 
 # Django haystack support
-git+https://github.com/dimasciput/django-haystack.gitdjango-proxy==1.1.0
+git+https://github.com/dimasciput/django-haystack.git
 elasticsearch==5.0.1
 
 # prometheus monitoring support
