--- a/deployment/production/REQUIREMENTS.txt
+++ b/deployment/production/REQUIREMENTS.txt
@@ -60,4 +60,4 @@ django-ckeditor==5.6.1
 django-crispy-forms==1.7.2
 djangorestframework-gis==0.13
 pandas==0.23.4
-pandas-access==0.0.1
+git+https://github.com/dimasciput/pandas_access.git
