Selenium test example

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -84,6 +84,8 @@ services:
       - elasticsearch:elasticsearch
       - geoserver:geoserver
       - worker:worker
+      - chrome-debug:chrome-debug
+      - hub:hub
     volumes:
       - geoserver-data-dir:/usr/src/geonode/geoserver/data/data
     restart: unless-stopped
@@ -175,3 +177,32 @@ services:
     volumes:
       - ./ipt:/usr/local/ip
     restart: unless-stopped
+
+#  chrome:
+#    image: selenium/node-chrome:3.141.59-dubnium
+#    volumes:
+#      - ./dev/shm:/dev/shm
+#      - ./scripts:/scripts
+#    depends_on:
+#      - hub
+#    environment:
+#      HUB_HOST: hub
+
+  chrome-debug:
+    image: selenium/node-chrome-debug:3.141.59-dubnium
+    volumes:
+      - /dev/shm:/dev/shm
+      - ./scripts:/scripts
+    depends_on:
+      - hub
+    environment:
+      HUB_HOST: hub
+    ports:
+      - 5900:5900
+
+  hub:
+    image: selenium/hub:3.141.59-dubnium
+    volumes:
+      - ./scripts:/scripts
+    ports:
+      - "4444:4444"
