--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -178,20 +178,10 @@ services:
       - ./ipt:/usr/local/ip
     restart: unless-stopped
 
-#  chrome:
-#    image: selenium/node-chrome:3.141.59-dubnium
-#    volumes:
-#      - ./dev/shm:/dev/shm
-#      - ./scripts:/scripts
-#    depends_on:
-#      - hub
-#    environment:
-#      HUB_HOST: hub
-
   chrome-debug:
     image: selenium/node-chrome-debug:3.141.59-dubnium
     volumes:
-      - /dev/shm:/dev/shm
+      - ./dev/shm:/dev/shm
       - ./scripts:/scripts
     depends_on:
       - hub
