--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   global:
-    - ON_TRAVIS=true
+    - ON_TRAVIS=True
     - SECRET_KEY='tT\xd7\xb06\xf7\x9b\xff\x0fZL\xca\xca\x11\xefM\xacr\xfb\xdf\xca\x9b'
     - DJANGO_SETTINGS_MODULE=core.settings.travis_docker
     - ALL_FILE=all.travis.yml
