--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - DJANGO_SETTINGS_MODULE=core.settings.travis_docker
     - ALL_FILE=all.travis.yml
     - COMPOSE_PROJECT_NAME=bims
-    - COMPOSE_FILE=deployment/docker-compose.travis.yml:deployment/docker-compose.override.yml
+    - COMPOSE_FILE=deployment/docker-compose.yml:deployment/docker-compose.override.yml
     - MONITORING_ENABLED=False
 
 matrix:
@@ -27,7 +27,7 @@ addons:
 before_install:
   # install ansible
   - sudo apt-get -y update
-  - sudo apt-get -y install libssl-dev systemd sshpass
+  - sudo apt-get -y install libssl-dev systemd
   - sudo pip install ansible
 
 install:
@@ -48,7 +48,7 @@ install:
 
 script:
   - make flake8-check
-  - make coverage-django-test ARGS="--log-level ERROR" CMD_ARGS="--verbosity 3"
+  - make coverage-django-test-selenium ARGS="--log-level ERROR" CMD_ARGS="--verbosity 3"
 
 after_success:
   - coverage combine
