--- a/deployment/ansible/development/group_vars/all.travis.yml
+++ b/deployment/ansible/development/group_vars/all.travis.yml
@@ -18,7 +18,7 @@ django:
     GEOCONTEXT_COLLECTION_KEY: 'climate'
     CONTACT_US_EMAIL: 'dimas@kartoza.com'
     DEBUG: True
-    DJANGO_SETTINGS_MODULE: core.settings.dev_docker
+    DJANGO_SETTINGS_MODULE: core.settings.travis_docker
     RABBITMQ_HOST: rabbitmq
     HAYSTACK_HOST: elasticsearch
     PYTHONPATH: /usr/src/app:/home/web/django_project
@@ -27,8 +27,10 @@ django:
     DATABASE_PASSWORD: docker
     DATABASE_USERNAME: docker
     DATABASE_HOST: db
-    SITEURL: http://uwsgi/
+    SITEURL: http://uwsgi:8080/
     SECRET_KEY: 'tT\xd7\xb06\xf7\x9b\xff\x0fZL\xca\xca\x11\xefM\xacr\xfb\xdf\xca\x9b'
+    ON_TRAVIS: True
+    SELENIUM_DRIVER: 'http://hub:4444/wd/hub'
 
 geonode:
   environment:
@@ -65,6 +67,11 @@ interpreters:
     ssh_port: &inasafe_django_ssh_port 63303
     pycharm_helpers: /home/web/django_project/.pycharm_helpers
     ipaddress: &inasafe_django_host_ip uwsgi
+
+selenium:
+   driver:
+     host: 172.17.0.1
+     port: 4444
 
 docker_port_forward:
   django:
